@@ -42,7 +42,6 @@ FarEditor::~FarEditor()
 	delete ret_str;
 }
 
-
 void FarEditor::endJob(int lno)
 {
 	delete ret_str;
@@ -88,7 +87,6 @@ void FarEditor::chooseFileType(String *fname)
 	FileType *ftype = baseEditor->chooseFileType(fname);
 	setFileType(ftype);
 }
-
 
 void FarEditor::setFileType(FileType *ftype)
 {
@@ -188,7 +186,6 @@ void FarEditor::reloadTypeSettings()
 	baseEditor->setBackParse(backparse);
 }
 
-
 FileType *FarEditor::getFileType()
 {
 	return baseEditor->getFileType();
@@ -227,7 +224,6 @@ void FarEditor::setOutlineStyle(bool oldStyle)
 	this->oldOutline = oldStyle;
 }
 
-
 void FarEditor::setRegionMapper(RegionMapper *rs)
 {
 	baseEditor->setRegionMapper(rs);
@@ -239,8 +235,6 @@ void FarEditor::setRegionMapper(RegionMapper *rs)
 
 	if (vertCrossColor == 0) vertCrossColor = 0x0E;
 }
-
-
 
 void FarEditor::matchPair()
 {
@@ -1100,6 +1094,7 @@ void FarEditor::cleanEditor()
 {
 	int col=(int)info->AdvControl(info->ModuleNumber,ACTL_GETCOLOR,(void *)COL_EDITORTEXT);
 
+  enterHandler();
 	for (int i=0; i<ei.TotalLines; i++)
 	{
 		EditorGetString egs;
@@ -1111,6 +1106,7 @@ void FarEditor::cleanEditor()
 		else
 			addFARColor(i,0,egs.StringLength,col);
 	}
+  leaveHandler();
 }
 
 /* ***** BEGIN LICENSE BLOCK *****
