@@ -3,6 +3,7 @@ farobj=$(obj_output_slash)pcolorer.$(obj) \
        $(obj_output_slash)FarEditorSet.$(obj) \
        $(obj_output_slash)FarEditor.$(obj) \
 			 $(obj_output_slash)registry_wide.$(obj) \
+			 $(obj_output_slash)tools.$(obj)
 
 objs = $(farobj) $(coreobjects)
 
@@ -20,3 +21,6 @@ $(obj_output_slash)FarEditor.$(obj): FarEditor.cpp *.h
 
 $(obj_output_slash)registry_wide.$(obj): registry_wide.cpp *.h
 	$(CPP) $(CPPFLAGS) registry_wide.cpp
+
+$(obj_output_slash)tools.$(obj): tools.cpp *.h
+	$(CPP) $(CPPFLAGS) tools.cpp
